results/archive/b60/compile_winograd_input_transform_kernel.dp_20260304_030815.log
Exit code: 1
=== STDOUT ===
=== SYCL Compilation Start ===
Timestamp: 20260304_030815
Kernel: winograd_input_transform_kernel.dp
Source: /workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp
Compiler: icpx
Flags: -fsycl -O2 -std=c++17

Starting compilation...
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:129:69: error: no matching function for call to 'IndexNHCW'
  129 |           *((sycl::uint4*)(&board[y][0])) = *((sycl::uint4*)(&input[IndexNHCW<C>(n, c, y, 0)]));
      |                                                                     ^~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:94:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'C'
   94 | inline int IndexNHCW(int n, int c, int h, int w) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:131:71: error: no matching function for call to 'IndexNHCW'
  131 |             *((sycl::uint4*)(&board[y][4])) = *((sycl::uint4*)(&input[IndexNHCW<C>(n, c, y, 4)]));
      |                                                                       ^~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:94:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'C'
   94 | inline int IndexNHCW(int n, int c, int h, int w) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:133:69: error: no matching function for call to 'IndexNCHW'
  133 |           *((sycl::uint4*)(&board[y][0])) = *((sycl::uint4*)(&input[IndexNCHW<C>(n, c, y, 0)]));
      |                                                                     ^~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:89:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'C'
   89 | inline int IndexNCHW(int n, int c, int h, int w) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:135:71: error: no matching function for call to 'IndexNCHW'
  135 |             *((sycl::uint4*)(&board[y][4])) = *((sycl::uint4*)(&input[IndexNCHW<C>(n, c, y, 4)]));
      |                                                                       ^~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:89:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'C'
   89 | inline int IndexNCHW(int n, int c, int h, int w) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:155:20: error: no matching function for call to 'TempIndexHWNC'
  155 |             output[TempIndexHWNC<N, C>(y, x, n * 4 + 0, c)] = inEl[y][x];
      |                    ^~~~~~~~~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:102:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'N'
  102 | inline int TempIndexHWNC(int h, int w, int n, int c) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:174:20: error: no matching function for call to 'TempIndexHWNC'
  174 |             output[TempIndexHWNC<N, C>(y, x, n * 4 + 1, c)] = inEl[y][x];
      |                    ^~~~~~~~~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:102:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'N'
  102 | inline int TempIndexHWNC(int h, int w, int n, int c) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:193:20: error: no matching function for call to 'TempIndexHWNC'
  193 |             output[TempIndexHWNC<N, C>(y, x, n * 4 + 2, c)] = inEl[y][x];
      |                    ^~~~~~~~~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:102:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'N'
  102 | inline int TempIndexHWNC(int h, int w, int n, int c) {
      |            ^
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:212:20: error: no matching function for call to 'TempIndexHWNC'
  212 |             output[TempIndexHWNC<N, C>(y, x, n * 4 + 3, c)] = inEl[y][x];
      |                    ^~~~~~~~~~~~~~~~~~~
/workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp:102:12: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'N'
  102 | inline int TempIndexHWNC(int h, int w, int n, int c) {
      |            ^
8 errors generated.

=== Compilation Exit Code: 1 ===
Compilation failed!

=== STDERR ===
+ echo '=== SYCL Compilation Start ==='
+ echo 'Timestamp: 20260304_030815'
+ echo 'Kernel: winograd_input_transform_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Flags: -fsycl -O2 -std=c++17'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Starting compilation...'
+ tee /workspace/results/b60/compile_winograd_input_transform_kernel.dp_20260304_030815.log
+ icpx -fsycl -O2 -std=c++17 -c /workspace/kernel_dataset/sycl/winograd_input_transform_kernel.dp.cpp -o /workspace/build_sycl/winograd_input_transform_kernel.dp.o
+ EXIT_CODE=1
+ echo ''
+ echo '=== Compilation Exit Code: 1 ==='
+ '[' 1 -eq 0 ']'
+ echo 'Compilation failed!'
+ exit 1
